# docs/swagger.json
@@ -5,6 +5,37 @@
         "license": {}
     },
     "paths": {
+        "/bill": {
+            "post": {
+                "description": "add bill",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bill"
+                ],
+                "summary": "新增账单",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ao.AddBillAo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "description": "login",
@@ -69,6 +100,26 @@
         }
     },
     "definitions": {
+        "ao.AddBillAo": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "billDate": {
+                    "type": "string"
+                },
+                "createBy": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                }
+            }
+        },
         "ao.LoginAo": {
             "type": "object",
             "properties": {
